# Computer-Vision

./: .gitignore
coin detection/: CMakeLists.txt  coin.cpp  program2  test.cpp
graphics editor/: CMakeLists.txt  program1  raster_graphic_editor.cpp
tracking/: CMakeLists.txt  ballTracker.cpp
videos/: CMakeLists.txt  assignment3.cpp  background_subtraction.cpp  tracking.cpp
yolo/: CMakeLists.txt  yolo.cpp
